10-137 usando mas componentes ..

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,6 +6,16 @@
   <button 
       pButton 
       (click)="mostrarNombre()" 
-      label="Cambiar nombre">
+      label="Cambiar nombre"
+      icon="pi pi-bell" 
+      iconPos="right"
+      class="p-button-help"
+      >
   </button>
+
+  <!-- <p-card header="{{nombre | titlecase}}" subheader="Este es el subheader"> -->
+  <p-card [header]="nombre | titlecase" subheader="Este es el subheader">
+      Lorem fistrum pecador la caidita torpedo ahorarr ahorarr te voy a borrar el cerito qué dise usteer. Pecador diodeno quietooor no puedor jarl tiene musho peligro amatomaa. Quietooor hasta luego Lucas por la gloria de mi madre apetecan la caidita la caidita hasta luego Lucas se calle ustée sexuarl.
+  </p-card>
+
 </div>
