10-144 pipes cadena y fecha

--- a/src/app/ventas/pages/basicos/basicos.component.html
+++ b/src/app/ventas/pages/basicos/basicos.component.html
@@ -4,19 +4,60 @@
     <p>
         Pipes incluidos en Angular - Usualmente en el Common Module
     </p>
-
-
-
 </div>
 
 <div class="grid">
     <div class="col-4">
-        <p-card header="uppercase"></p-card>
+        <p-card header="{{textoCompleto}} | uppercase"
+                [subheader]="textoCompleto | uppercase">
+            {{ textoCompleto | uppercase}}
+        </p-card>
     </div>
     <div class="col-4">
-        2
+        <p-card header="{{textoCompleto}} | lowercase"
+                [subheader]="textoCompleto | lowercase">
+            {{ textoCompleto | lowercase}}
+        </p-card>
     </div>
     <div class="col-4">
-        3
+        <p-card header="{{textoCompleto}} | titlecase"
+                [subheader]="textoCompleto | titlecase">
+            {{ textoCompleto | titlecase}}
+        </p-card>
     </div>
 </div>
+
+<div class="text-layout">
+    <h1>Date | Fecha | Pipe</h1>
+    <p>
+        Pipe para mostrar las fechas.
+    </p>
+</div>
+
+<div class="grid">
+    <div class="col-6">
+        <p-card >
+            <ul>
+                <li> fecha </li>
+                <li> fecha | date </li>
+                <li> fecha | date:'short' </li>
+                <li> fecha | date:'medium' </li>
+                <li> fecha | date:'long' </li>
+                <li> fecha | date:'E dd/MM/YYYY HH:mm:ss.SSS' </li>
+            </ul>
+        </p-card>
+    </div>
+    <div class="col-6">
+        <p-card >
+            <ul>
+                <li>{{fecha}}</li>
+                <li>{{fecha | date }}</li>
+                <li>{{fecha | date:'short' }}</li>
+                <li>{{fecha | date:'medium' }}</li>
+                <li>{{fecha | date:'long' }}</li>
+                <li>{{fecha | date:'E dd/MM/YYYY HH:mm:ss.SSS' }}</li>
+            </ul>
+        </p-card>
+    </div>
+</div>
+
