--- a/src/app/ventas/pages/no-comunes/no-comunes.component.html
+++ b/src/app/ventas/pages/no-comunes/no-comunes.component.html
@@ -1,1 +1,78 @@
-<p>no-comunes works!</p>
+<div class="text-layout">
+    <h1>Pipes no tan comunes</h1>
+    <p>
+        Pipes incluidos en Angular - Usualmente en el Common Module.
+    </p>
+</div>
+
+<div class="grid">
+    <div class="col-12 sm:col-6">
+        <p-fieldset legend="i18nSelect Pipe" [toggleable]="true">
+            <p>Saludos {{ nombreInvitado }}, es un placer {{ genero | i18nSelect:invitacionMapa}} a nuestro evento</p>
+            <button pButton 
+                    label="Cambiar Persona"
+                    (click)="cambiaInvitado()">
+            </button>
+        </p-fieldset>        
+    </div>
+    <div class="col-12 sm:col-6">
+        <p-fieldset legend="i18nPlural Pipe" [toggleable]="true">
+            <p>Actualmente {{ clientes.length | i18nPlural:clientesMapa }} esperando</p>
+            <p-button 
+                (onClick)="quitarCliente()"
+                label="Borrar cliente">               
+            </p-button>
+        </p-fieldset>        
+    </div>
+
+    <div class="col-12 sm:col-6">
+        <p-fieldset legend="SlicePipe" [toggleable]="true">
+            <b>Original</b>
+            <pre>{{ clientes }}</pre>
+
+            <b>slice:0:3</b>
+            <pre>{{ clientes | slice:0:3 }}</pre>
+
+            <b>slice:1:3</b>
+            <pre>{{ clientes | slice:1:3 }}</pre>
+
+            <b>slice:3:3</b>
+            <pre>{{ clientes | slice:3:3 }}</pre>
+
+            <b>{{nombreInvitado}} | slice:1:3</b>
+            <pre>{{ nombreInvitado | slice:1:3 }}</pre>
+
+        </p-fieldset>        
+    </div>
+
+    <div class="col-12 sm:col-6">
+        <p-fieldset legend="JSON Pipe" [toggleable]="true">
+            <p>Imprimir las claves y valores del objeto </p>
+            <pre>{{ heroes | json }}</pre>
+        </p-fieldset>        
+    </div>
+
+    <div class="col-12 sm:col-6">
+        <p-fieldset legend="KeyValue Pipe" [toggleable]="true">
+            <p>Obtener las claves y valores del objeto </p>
+            <pre>{{ persona | json }}</pre>
+            <ul>
+                <li *ngFor="let item of persona| keyvalue">
+                    <b>{{ item.key }}:</b> {{ item.value }}
+                </li>
+            </ul>
+        </p-fieldset>        
+    </div>
+    
+    <div class="col-12 sm:col-6">
+        <p-fieldset legend="Async Pipe" [toggleable]="true">
+            <p>Observable </p>
+            <pre *ngIf="!(miObservable | async)">Resolviendo observable </pre>
+            <pre> {{ miObservable | async }}</pre>
+            <p>Promesa </p>
+            <pre *ngIf="!(valorPromesa | async)">Resolviendo promesa </pre>
+            <pre> {{ valorPromesa | async }}</pre>
+        </p-fieldset>        
+    </div>
+    
+</div>
