--- a/src/app/ventas/pages/ordenar/ordenar.component.html
+++ b/src/app/ventas/pages/ordenar/ordenar.component.html
@@ -6,11 +6,59 @@
     <p>{{'NoSoTrOs' | mayusculas:false}}</p>
 
     <p>{{'Cambiando el texto con el botón' | mayusculas: aMayusculas }}</p>
-    <button pButton 
+    <!-- lo hemos pasado más abajo
+        <button pButton 
             label="Cambiar Mayúsculas/Minúsculas"
             (click)="cambiaCaps()">
-    </button>
+    </button> -->
 
 </div>
 
+<p-toolbar>
+    <div class="p-toolbar-group-left">
+    </div>
+
+    <div class="p-toolbar-group-right">
+        <button pButton 
+                label="Cambiar Mayúsculas/Minúsculas"
+                class="p-button-warning mr-1"
+                (click)="cambiaCaps()">
+        </button>
+        <button pButton 
+                icon="pi pi-sort"
+                label="Por nombre"
+                class="mr-1"></button>
+
+        <button pButton 
+                icon="pi pi-sort"
+                label="Valores"
+                class="p-button-success mr-1"></button>
+
+        <button pButton 
+                icon="pi pi-sort"
+                label="Por color"
+                class="p-button-help mr-1"></button>
+    </div>
+</p-toolbar>
+
+<div class="grid">
+    <div class="col mt-2">
+        <p-table [value]="heroes | ordenar ">
+            <ng-template pTemplate="header">
+                <tr>
+                    <th>Nombre</th>
+                    <th>Vuela</th>
+                    <th>Color</th>
+                </tr>
+            </ng-template>
+            <ng-template pTemplate="body" let-heroe>
+                <tr>
+                    <td>{{ heroe.nombre }}</td>
+                    <td>{{ heroe.vuela | vuela | titlecase }}</td>
+                    <td>{{ heroe.color }}</td>
+                </tr>
+            </ng-template>
+        </p-table>
+    </div>
+</div>
 
