11-167 pipe ordenar con parametros

--- a/src/app/ventas/pages/ordenar/ordenar.component.html
+++ b/src/app/ventas/pages/ordenar/ordenar.component.html
@@ -27,23 +27,26 @@
         <button pButton 
                 icon="pi pi-sort"
                 label="Por nombre"
-                class="mr-1"></button>
+                class="mr-1"
+                (click)="cambiarOrden('nombre')"></button>
 
         <button pButton 
                 icon="pi pi-sort"
-                label="Valores"
-                class="p-button-success mr-1"></button>
+                label="Vuela"
+                class="p-button-success mr-1"
+                (click)="cambiarOrden('vuela')"></button>
 
         <button pButton 
                 icon="pi pi-sort"
                 label="Por color"
-                class="p-button-help mr-1"></button>
+                class="p-button-help mr-1"
+                (click)="cambiarOrden('color')"></button>
     </div>
 </p-toolbar>
 
 <div class="grid">
     <div class="col mt-2">
-        <p-table [value]="heroes | ordenar ">
+        <p-table [value]="heroes | ordenar: ordernarPor ">
             <ng-template pTemplate="header">
                 <tr>
                     <th>Nombre</th>
